Organized project structure: separated HTML,and CSS

--- a/about.html
+++ b/about.html
@@ -7,111 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background-color: #2a9d8f;
-      color: white;
-      padding: 1rem 2rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-    }
-    .about-section {
-      padding: 2rem;
-      text-align: center;
-    }
-    .about-section img {
-      border-radius: 50%;
-      width: 150px;
-      height: 150px;
-      margin-bottom: 1rem;
-    }
-    .about-section h2 {
-      color: #2a9d8f;
-      margin-bottom: 1rem;
-    }
-    .about-text {
-      margin: 1rem auto;
-      max-width: 800px;
-      line-height: 1.6;
-      color: #555;
-    }
-    .skills-section {
-      margin: 3rem 0;
-    }
-    .skills-list {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 1rem;
-      padding: 0;
-      list-style: none;
-    }
-    .skills-list li {
-      background: #2a9d8f;
-      color: white;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
-    }
-    .achievements-section {
-      margin: 3rem 0;
-      text-align: center;
-    }
-    .achievements-section h2 {
-      color: #2a9d8f;
-    }
-    .achievements-list {
-      list-style: none;
-      padding: 0;
-      text-align: left;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .achievements-list li {
-      margin: 1rem 0;
-      color: #555;
-    }
-    .documents-section {
-      margin: 2rem 0;
-      text-align: center;
-    }
-    .documents-section a {
-      color: #2a9d8f;
-      text-decoration: none;
-    }
-    .contact-section {
-      margin: 2rem 0;
-    }
-    .contact-links {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      font-size: 1.5rem;
-      color: #2a9d8f;
-    }
-    .contact-links a {
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-    .contact-links a:hover {
-      color: #e76f51;
-    }
-    footer {
-      background: #2a9d8f;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-  </style>
+  <link rel="stylesheet" href="about.css">
 </head>
 <body>
   <header>
