--- a/contact.html
+++ b/contact.html
@@ -4,108 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Me</title>
-  <style>
-    /* Global styles */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-
-    /* Header styles */
-    header {
-      background-color: #333;
-      padding: 20px;
-      color: white;
-      text-align: center;
-    }
-
-    header .logo {
-      font-size: 24px;
-      font-weight: bold;
-    }
-
-    header nav {
-      margin-top: 10px;
-    }
-
-    header nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    header nav a:hover {
-      text-decoration: underline;
-    }
-
-    /* Contact section */
-    #contact {
-      padding: 20px;
-      max-width: 800px;
-      margin: 40px auto;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    h2 {
-      text-align: center;
-      color: #4CAF50;
-    }
-
-    .contact-info {
-      margin-top: 30px;
-    }
-
-    .contact-info p {
-      font-size: 18px;
-      margin: 15px 0;
-    }
-
-    .contact-info a {
-      color: #4CAF50;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .contact-info a:hover {
-      text-decoration: underline;
-    }
-
-    /* Footer styles */
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-    }
-
-    footer p {
-      margin: 0;
-    }
-
-    /* Responsive design */
-    @media (max-width: 600px) {
-      header .logo {
-        font-size: 20px;
-      }
-
-      #contact {
-        padding: 15px;
-      }
-
-      .contact-info p {
-        font-size: 16px;
-      }
-    }
-  </style>
+<link rel="stylesheet" href="contact.css">
 </head>
 <body>
 
@@ -140,12 +39,6 @@
 </footer>
 
 <!-- Optional: Add JavaScript for extra features -->
-<script>
-  // Example: Adding a simple alert when the page is loaded
-  window.onload = function() {
-    console.log("Welcome to the Contact Me page!");
-  }
-</script>
 
 </body>
 </html>
