--- a/home.html
+++ b/home.html
@@ -4,127 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sabira's Portfolio</title>
-  <style>
-    body, h1, h2, p {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
-    header {
-      background: #333;
-      color: white;
-      padding: 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    nav ul {
-      list-style: none;
-      display: flex;
-      margin: 0;
-    }
-    nav ul li {
-      margin: 0 1rem;
-    }
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-    }
-    nav ul li a:hover {
-      color: #f4a261;
-    }
-    .hero-section {
-      background: url('map2.jpg') center/cover no-repeat;
-      height: 90vh;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-    .hero-section h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    .hero-section p {
-      font-size: 1.5rem;
-      margin-bottom: 2rem;
-    }
-    .hero-section a {
-      padding: 0.8rem 2rem;
-      font-size: 1rem;
-      color: white;
-      background: #f4a261;
-      text-decoration: none;
-      border-radius: 5px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-    .hero-section a:hover {
-      background: #e76f51;
-    }
-    .section {
-      padding: 2rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .section h2 {
-      text-align: center;
-      margin-bottom: 2rem;
-      color: #333;
-    }
-    .section p {
-      text-align: center;
-      color: #555;
-      line-height: 1.6;
-    }
-    .cta-section {
-      background: #f4f4f4;
-      text-align: center;
-      padding: 2rem;
-      margin-top: 3rem;
-    }
-    .cta-section a {
-      display: inline-block;
-      padding: 0.8rem 2rem;
-      font-size: 1rem;
-      color: white;
-      background: #f4a261;
-      text-decoration: none;
-      border-radius: 5px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-    .cta-section a:hover {
-      background: #e76f51;
-    }
-    footer {
-      background: #333;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-      margin-top: 3rem;
-    }
-    footer a {
-      color: #f4a261;
-      text-decoration: none;
-      margin: 0 0.5rem;
-    }
-    footer a:hover {
-      color: #e76f51;
-    }
-    footer .social-icons {
-      margin: 1rem 0;
-    }
-    footer .social-icons a {
-      margin: 0 0.5rem;
-      font-size: 1.5rem;
-      text-decoration: none;
-      color: white;
-    }
-    footer .social-icons a:hover {
-      color: #f4a261;
-    }
-  </style>
+  <link rel="stylesheet" href="home.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
