--- a/myWork.html
+++ b/myWork.html
@@ -7,116 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-    }
-    header {
-      background: #2a9d8f;
-      padding: 1rem 2rem;
-      text-align: center;
-      color: white;
-    }
-    header h1 {
-      margin: 0;
-    }
-    #my-work {
-      text-align: center;
-      padding: 2rem;
-      background: #f4f4f4;
-    }
-    .section-description {
-      margin-bottom: 2rem;
-      color: #555;
-    }
-    .work-cards {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1.5rem;
-    }
-    .card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      padding: 1rem;
-      max-width: 300px;
-      text-align: left;
-    }
-    .card img {
-      width: 100%;
-      border-radius: 10px;
-    }
-    .card h3 {
-      color: #333;
-      margin: 0.5rem 0;
-    }
-    .card p {
-      color: #555;
-      font-size: 0.9rem;
-      line-height: 1.4;
-    }
-    .card .btn {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      color: white;
-      background: #f4a261;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
-    .card .btn:hover {
-      background: #e76f51;
-    }
-    .skills-section {
-      margin: 3rem 0;
-    }
-    .skills-icons {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      font-size: 2rem;
-      color: #f4a261;
-    }
-    .cv-section {
-      margin: 3rem 0;
-      padding: 10px;
-    }
-    .btn a {
-      margin-top: 10px;
-    }
-    .cv-section .btn {
-      padding: 0.7rem 2rem;
-      font-size: 1rem;
-      background: #2a9d8f;
-      color: white;
-      border-radius: 5px;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    .cv-section .btn:hover {
-      background: #21867a;
-    }
-    footer {
-      background: #2a9d8f;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-    footer a {
-      color: white;
-      text-decoration: none;
-      margin: 0 0.5rem;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="myWork.css">
 </head>
 <body>
   <header>
